2009-04-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MacPlatform.csproj: Updated.

	* Ige:
	* Ige/IgeMacDock.cs:
	* Ige/IgeMacMenu.cs:
	* Ige/IgeMacBundle.cs:
	* Ige/ObjectManager.cs:
	* Ige/IgeMacMenuGroup.cs:
	* Ige/IgeMacAttentionType.cs:
	* Ige/IgeMacAttentionRequest.cs: Remove IGE, as it's no longer
	  used.

	* Menus/OSXMenu.cs: Make comment clearer.

	* MacPlatform.cs: Remove IGE. Add dock quit and click support.
	  Stub doc open support.

	* Framework/Carbon.cs: Add some more definitions.

2009-04-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Implement support for array commands and
	  dynamically populated submenus.

	* Framework/HIToolbox.cs: More P/Invokes and enums.

2009-04-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Keep commands ID mappings around
	  permanently, so that recreation is cleaner. Fixes app menu
	  commands after recreation.

	* MacPlatform.cs: Hide quit command from file menu, since it's
	  in app menu. Track API.

2009-04-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Lots of refactoring. Handle updating text,
	  accelerators, visibility, sensitivity. Hide unnecessary
	  separators. Disable menus when MD root window doesn't have
	  toplevel focus so that it can't interfere with modal
	  dialogs. Map commands to standard command IDs when possible.
	  Dispatch commands after returning from handler. Avoid
	  command ID 0 since it's used when there's no command ID. Add
	  an API for handling the app menu.

	* MacPlatform.cs: Install app menu items without using IGE.
	  Enable Mac menu since it mostly works now.

	* Framework/Carbon.cs: More bindings. Fix Handled/NotHandled
	  values (MWF had them the wrong way round).

	* Framework/HIToolbox.cs: More bindings.

2009-04-08  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MacPlatform.csproj: Add System.Core ref.

	* Menus/OSXMenu.cs: Implement command enabled/disable